# my-monmon

./: .env.example  Dockerfile  README.md  Untitled Diagram.drawio  dbdiagram.io  docker-compose.yml  manage.py  pyproject.toml
monmon/: asgi.py  settings.py  urls.py  wsgi.py
my_monmon/: pyproject.toml
my_monmon/my_monmon/: main_page.html
polls/: views.py
